@@ -9,6 +9,7 @@ history and functions can be displayed in dock or floated windows
 fixed accuracy problem when calculating 10^x where x is integer
 shortcut Ctrl+Q to quit (ubuntu bug#102734)
 improved (and non-intrusive) autocalc tip
+color for error messages can be customized
 
 SpeedCrunch 0.7
 ---------------
